# j0CC-FamiTracker

./: 0CC-FamiTracker.rc  0CC-FamiTracker.vcxproj  0CC-FamiTracker.vcxproj.filters  0cc-x64-common.props  0cc-x64.sln  0cc-x64.vcxproj  CMakeLists.txt  README.md  appveyor.yml  cqtmfc_famitracker.cpp  cqtmfc_famitracker.h  exe.cmake  header-case.sh  j0CC-FamiTracker.pro  lowercase.sh  name.h  nesicide-famitracker-lib.pro  version.h
Source/: AboutDlg.cpp  AboutDlg.h  Accelerator.cpp  Accelerator.h  Action.cpp  Action.h  Bookmark.cpp  Bookmark.h  BookmarkCollection.cpp  BookmarkCollection.h  BookmarkDlg.cpp  BookmarkDlg.h  BookmarkManager.cpp  BookmarkManager.h  ChannelFactory.cpp  ChannelFactory.h  ChannelHandler.cpp  ChannelHandler.h  ChannelHandlerInterface.h  ChannelMap.cpp  ChannelMap.h  ChannelState.cpp  ChannelState.h  Channels2A03.cpp  Channels2A03.h  ChannelsDlg.cpp  ChannelsDlg.h  ChannelsFDS.cpp  ChannelsFDS.h  ChannelsMMC5.cpp  ChannelsMMC5.h  ChannelsN163.cpp  ChannelsN163.h  ChannelsS5B.cpp  ChannelsS5B.h  ChannelsVRC6.cpp  ChannelsVRC6.h  ChannelsVRC7.cpp  ChannelsVRC7.h  Chunk.cpp  (+264 more)
Source/APU/: 2413tone.h  2A03.cpp  2A03.h  2A03Chan.h  APU.CPP  APU.cpp  APU.h  Channel.h  DPCM.CPP  DPCM.h  FDS.CPP  FDS.H  FDS.cpp  FDSSound.cpp  MMC5.CPP  MMC5.H  MMC5.cpp  Mixer.cpp  Mixer.h  N163.CPP  N163.H  N163.cpp  Noise.cpp  Noise.h  S5B.cpp  S5B.h  SoundChip.cpp  SoundChip.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  Types.h  VRC6.CPP  VRC6.H  VRC6.cpp  VRC7.cpp  VRC7.h  emu2413.c  emu2413.h  (+1 more)
Source/Blip_Buffer/: Blip_Buffer.cpp  Blip_Buffer.h
Source/FFT/: FftBuffer.h  FftComplex.hpp
Source/WinSDK/: VersionHelpers.h  winapifamily.h
Source/drivers/: build.cmd  drv_2a03.h  drv_all.h  drv_fds.h  drv_mmc5.h  drv_n163.h  drv_s5b.h  drv_vrc6.h  drv_vrc7.h
Source/json/: json.hpp
Source/resampler/: resample.cpp  resample.hpp  sinc.cpp  sinc.hpp
Source/str_conv/: str_conv.hpp  utf8_conv.hpp
Source/type_safe/: arithmetic_policy.hpp  boolean.hpp  bounded_type.hpp  (+20 more)
res/: 0CC-FamiTracker.rc  resource.h
(+12 files in other folders)
